<resources>
    <string name="app_name">VISTA</string>
    <string name="EditDestinationActivity_SelectDestinationBusStop">Select Destination Bus Stop</string>

    <string name="btn_Confirm">Confirm</string>
    <string name="btn_Comm">Voice to Command</string>
    <string name="btn_next">Next</string>
    <string name="btn_Openreminder">Open/Close \nReminder</string>

    <string name="MainMenuPageActivity_title">Main Menu</string>
    <string name="MainMenuPageActivity_ImageToText">Image To Text</string>
    <string name="MainMenuPageActivity_Setting">Setting</string>
    <string name="MainMenuPageActivity_FindBusStop">BUS FUNCTION</string>
    <string name="MainMenuPageActivity_ChatBot">Chat Bot</string>
    <string name="MainMenuPageActivity_VoiceControl">Voice Control</string>

    <string name="SettingActivity_Setting">Setting</string>
    <string name="SettingActivity_LanguageSetting">Language Setting</string>
    <string name="SettingActivity_VoiceSetting">Voice Setting</string>

    <!-- Language options -->
    <string name="language_english">English</string>
    <string name="language_traditional_chinese_hk">繁體中文 (香港)</string>

    <string name="imageToTextMenu_title">Image To Text Menu</string>
    <string name="imageToTextMenu_SelectImageDetect">Select Image Detect</string>
    <string name="imageToTextMenu_RealTimeDetect">Real Time Detect</string>
    <string name="imageToTextMenu_TakePhotoDetect">Take Photo Detect</string>

    <string name="FindBusEditMen_EditRoute">Setting Route</string>
    <string name="FindBusEditMen_EditOutboundDirection">Setting Direction</string>
    <string name="FindBusEditMen_EditStartPoint">Setting Start Point</string>
    <string name="FindBusEditMen_EditDestination">Setting Destination</string>

    <string name="EditRouteActivity_title">Edit Bus Route</string>
    <string name="EditRouteActivity_input">Enter Bus Route</string>


    <string name="EditOutboundDirectionActivity_title">Select Bus Outbound direction</string>

    <string name="EditStartPointActivity_title">Select Start Point Bus Stop</string>

    <string name="FindBusStopMenuPage_EditDestination">Edit Destination</string>
    <string name="FindBusStopMenuPage_ShowArriveTIme">Show Arrive Time</string>
    <string name="FindBusStopMenuPage_StartDetectBusStop">Start DetectBus Stop</string>
    <string name="FindBusStopMenuPage_BusArrivalAlert">Bus Arrival Alert</string>

    <string name="showArriveTimePage_title">Show Arrive Time</string>

    <string name="VoiceSettingPage_title">Voice Setting</string>

    <string name="VoiceSettingPage_VoiceLanguageSetting">Voice Language Setting</string>
    <string name="VoiceSettingPage_VoiceSpeedSetting">Voice Speed Setting</string>
    <string name="VoiceSettingPage_VoiceGenderSetting">Voice Gender Setting</string>

    <string name="EditRoute_openKeyboard">Open Keyboard</string>
    <string name="VoiceControlPage_Start">Start</string>
    <string name="showArriveTimePage_currentBusStop">Current Bus Stop:</string>
    <string name="selectImageDetectPage_result">Result:</string>
    <string name="FindBusStopMenuPage_BusRouteInfo">Route:42A\nTo:Jordan (West Kowloon Station)\nStart Point: xxx\nDestination: xxx</string>
    <string name="setting">setting</string>
    <string name="btn_bus_detect">Bus Detection</string>


</resources>