<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:weightSum="5">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="193dp"
        android:layout_height="182dp"
        android:layout_weight="1"
        android:src="@drawable/vista_logo"
        android:layout_gravity="center" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/MainMenuPageActivity_title"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnMainMenuImgToTxt"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/MainMenuPageActivity_ImageToText"
        android:textSize="22sp" />

    <!-- Find Bus Stop Button -->
    <Button
        android:id="@+id/button5"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/MainMenuPageActivity_FindBusStop"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btnMainMenuSetting"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/MainMenuPageActivity_Setting"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btnMainMenuImgToTxt3"
        android:layout_width="355dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text=""
        android:textSize="22sp" />

    <!-- LinearLayout for Confirm and Next Buttons at the Bottom -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_marginTop="16dp"
        android:weightSum="2">

        <!-- Confirm Button -->
        <Button
            android:id="@+id/btnMainMenuConfirm"
            android:layout_width="0dp"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:text="@string/btn_Confirm"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- Next Button -->
        <Button
            android:id="@+id/btnMainMenuNext"
            android:layout_width="0dp"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:text="@string/btn_next"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>