<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:weightSum="5">

    <!-- Main Menu text -->

    <!-- Image to Text Button -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/SettingActivity_Setting"
        android:textSize="50sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLanSetting"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/SettingActivity_LanguageSetting"
        android:textSize="22sp" />

    <!-- Find Bus Stop Button -->
    <Button
        android:id="@+id/btnVoiceSetting"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/SettingActivity_VoiceSetting"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btn"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text=""
        android:textSize="22sp" />

    <!-- Find Bus Stop Button -->
    <Button
        android:id="@+id/button5"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text=""
        android:textSize="22sp" />


    <!-- LinearLayout for Confirm and Next Buttons at the Bottom -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_marginTop="16dp"
        android:weightSum="2">

        <!-- Confirm Button -->
        <Button
            android:id="@+id/btnEditRouteActivityConfirm"
            android:layout_width="0dp"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:text="@string/btn_Confirm"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- Next Button -->
        <Button
            android:id="@+id/btnEditRouteActivityNext"
            android:layout_width="0dp"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:text="@string/btn_next"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>