<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:weightSum="5">

    <TextView
        android:id="@+id/txtFindBusStopMenuPageBusRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Route:42A\nTo:佐敦(西九龍站)\nSart Point: xxx站\nDestination:xxx站"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:gravity="center"/>

    <!-- Image to Text Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFindBusStopMenuPageEditDestination"
        style="@style/SemiTransparentRoundedButton"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/FindBusStopMenuPage_EditDestination"
        android:textSize="22sp" />

    <!-- Find Bus Stop Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFindBusStopMenuPageShowArriveTIme"
        style="@style/SemiTransparentRoundedButton"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/FindBusStopMenuPage_ShowArriveTIme"
        android:textSize="22sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFindBusStopMenuPageStartDetectBusStop"
        style="@style/SemiTransparentRoundedButton"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/FindBusStopMenuPage_StartDetectBusStop"
        android:textSize="22sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFindBusStopMenuPageBusArrivalAlert"
        style="@style/SemiTransparentRoundedButton"
        android:layout_width="355dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/FindBusStopMenuPage_BusArrivalAlert"
        android:textSize="22sp" />

    <!-- LinearLayout for Confirm and Next Buttons at the Bottom -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_marginTop="16dp"
        android:weightSum="2">

        <!-- Confirm Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFindBusStopMenuPageConfirm"
            style="@style/SemiTransparentRoundedButton"
            android:layout_width="0dp"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:text="@string/btn_Confirm"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- Next Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFindBusStopMenuPageNext"
            style="@style/SemiTransparentRoundedButton"
            android:layout_width="0dp"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:text="@string/btn_next"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>