<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="5">

    <!-- Route Information TextView -->
    <TextView
        android:id="@+id/txtFindBusEditBusRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Route:42A\nTo:佐敦(西九龍站)\nStart Point: xxx站\nDestination:xxx站"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFindBusEditEditRoute"
        style="@style/SemiTransparentRoundedButton"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/FindBusEditMen_EditRoute"
        android:textSize="22sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFindBusEditOutboundDirection"
        style="@style/SemiTransparentRoundedButton"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/FindBusEditMen_EditOutboundDirection"
        android:textSize="22sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFindBusEditStartPoint"
        style="@style/SemiTransparentRoundedButton"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/FindBusEditMen_EditStartPoint"
        android:textSize="22sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFindBusEditDestination"
        style="@style/SemiTransparentRoundedButton"
        android:layout_width="355dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/FindBusEditMen_EditDestination"
        android:textSize="22sp" />

</LinearLayout>