<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="16sp"
tools:context=".VoiceControl.ByBus.VoiceControlBusRoute"
android:background="@color/white">

<TextView
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:gravity="center"
    android:text="@string/EditRouteActivity_title"
    android:textColor="#3BA7C9"
    android:textSize="26sp"
    android:textStyle="bold" />

<EditText
    android:id="@+id/etBusRoute"
    android:layout_width="match_parent"
    android:layout_height="59dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/edittext_background"
    android:hint="@string/EditRouteActivity_input"
    android:textSize="20sp"
    android:textColor="#3BA7C9"
    android:textColorHint="#3BA7C9"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="418dp"
    android:gravity="center"
    android:text=""
    android:textColor="#3BA7C9"
    android:textSize="26sp"
    android:textStyle="bold"
    />

<!-- LinearLayout for Confirm and Next Buttons at the Bottom -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="16dp"
    android:gravity="bottom"
    android:orientation="horizontal"
    android:weightSum="2">

    <!-- Confirm Button -->

    <!-- Next Button -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditRouteActivityConfirm"
        style="@style/SemiTransparentRoundedButton"
        android:layout_width="0dp"
        android:layout_height="83dp"
        android:layout_weight="1"
        android:text="@string/btn_Confirm"
        android:textSize="22sp"
        android:textStyle="bold"
        android:background="@drawable/btn_photo_gradient"
        app:backgroundTint="@null"
        app:backgroundTintMode="src_over"
        app:cornerRadius="0dp"
        app:strokeColor="@null"
        app:strokeWidth="0dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditRouteActivityNext"
        style="@style/SemiTransparentRoundedButton"
        android:layout_width="0dp"
        android:layout_height="83dp"
        android:layout_weight="1"
        android:text="@string/EditRoute_openKeyboard"
        android:textSize="22sp"
        android:textStyle="bold"
        android:background="@drawable/btn_photo_gradient"
        app:backgroundTint="@null"
        app:backgroundTintMode="src_over"
        app:cornerRadius="0dp"
        app:strokeColor="@null"
        app:strokeWidth="0dp"/>
</LinearLayout>
</LinearLayout>