<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    android:background="@drawable/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/VoiceSettingPage_VoiceLanguageSetting"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"/>

    <ListView
        android:id="@+id/lvLanguageSpeedSetting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <!-- LinearLayout for Confirm and Next Buttons at the Bottom -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_marginTop="16dp"
        android:weightSum="2">

        <!-- Confirm Button -->
        <Button
            android:id="@+id/btnLanguageSpeedConfirm"
            android:layout_width="0dp"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:text="@string/btn_Confirm"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- Next Button -->
        <Button
            android:id="@+id/btnLanguageSpeedNext"
            android:layout_width="0dp"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:text="@string/btn_next"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>