<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp"
    android:background="@drawable/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SettingActivity_LanguageSetting"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"/>

    <ListView
        android:id="@+id/lvLanguageSetting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/list_item_border"
        android:divider="@drawable/custom_divider"/>

    <!-- LinearLayout for Confirm and Next Buttons at the Bottom -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_marginTop="16dp"
        android:weightSum="2">

        <!-- Confirm Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEditRouteActivityConfirm"
            style="@style/SemiTransparentRoundedButton"
            android:layout_width="0dp"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:text="@string/btn_Confirm"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- Next Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEditRouteActivityNext"
            style="@style/SemiTransparentRoundedButton"
            android:layout_width="0dp"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:text="@string/btn_next"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>